--- a/style.css
+++ b/style.css
@@ -4,25 +4,35 @@ padding:0px;
 user-select:none;
 }
 body{
-background-color:#555;
+background-color:#666;
+background-image:url(Back.png);
+background-size:cover;
+background-attachment: fixed;
 }
 h1,h2{
 color:#CCC;
 font-family:sans-serif;
 font-size:60px;
 text-shadow:-2px -2px white, 5px 5px black;
-margin-left:50px;
 text-decoration:underline;
 }
 h2{
+margin-left:50px;
 color:white;
-font-size:25px;
+font-size:20px;
 text-shadow:none;
 margin-top:15px;
 }
 header,div{
-background-color:#444;
+background-image:linear-gradient(#555,#333);
+box-shadow: 0px 0px 255px black;
 border:6px solid #333;
+}
+header{
+position:fixed;
+width:fit-content;
+padding:10px;
+transform:scale(0.5,0.5) translate(-170px,-140px);
 }
 div{
 height:650px;
@@ -103,7 +113,7 @@ margin-left:5px;
 margin-right:5px;
 }
 #EraseButton{
-background-color:#422;
+background-image:linear-gradient(#422,#211);
 border-color:#311;
 }
 #EraseButton:hover{
@@ -115,8 +125,8 @@ background-color:#944;
 border-color:#844;
 }
 #AcceptButton{
-background-color:#242;
 border-color:#131;
+background-image:linear-gradient(#242,#121);
 }
 #AcceptButton:hover{
 background-color:#363;
