--- a/style.css
+++ b/style.css
@@ -12,9 +12,24 @@ background-attachment: fixed;
 h1,h2{
 color:#CCC;
 font-family:sans-serif;
-font-size:60px;
+font-size:30px;
+margin-bottom:25px;
 text-shadow:-2px -2px white, 5px 5px black;
 text-decoration:underline;
+}
+#Menu{
+overflow:hidden;
+height:25px;
+width:160px;
+margin:0px;
+margin-top:0px;
+border-radius:0px;
+padding:20px;
+transition-duration:1s;
+}
+#Menu:hover{
+height:235px;
+width:220px;
 }
 h2{
 margin-left:50px;
@@ -23,7 +38,7 @@ font-size:20px;
 text-shadow:none;
 margin-top:15px;
 }
-header,div{
+div{
 background-image:linear-gradient(#555,#333);
 box-shadow: 0px 0px 255px black;
 border:6px solid #333;
@@ -32,7 +47,7 @@ header{
 position:fixed;
 width:fit-content;
 padding:10px;
-transform:scale(0.5,0.5) translate(-170px,-140px);
+transform: translate(10px,-50px);
 }
 div{
 height:650px;
@@ -145,6 +160,11 @@ img{
 	float:right;
 	border:5px solid black;
 	border-radius:20px;
+}
+.BigPic{
+	width:960px;
+	height:540px;
+	display:inline;
 }
 .description,.written{
 	font-size:30px;
